--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "autoload": {
     "psr-4": {
-      "App\\": "php-design-pattern/"
+      "App\\abstract_factory\\": "abstract_factory/"
     }
   }
 }
